# running_text

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
app/: models.py  service_layer.py  views.py
it_solution/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_runtext.py
