[tool.poetry]
name = "it-solution"
version = "0.1.0"
description = ""
authors = ["Anastasia Yermakova <ertya0909@gmail.com>"]
readme = "README.md"
packages = [{include = "it_solution"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
